[gd_scene load_steps=19 format=2]

[ext_resource path="res://ResourcesV2/Images/pixelSkyline.jpg" type="Texture" id=1]
[ext_resource path="res://ResourcesV2/Images/MainLogo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainScenesV2/Lobby.gd" type="Script" id=3]
[ext_resource path="res://ResourcesV2/Images/CreateRoomActive.png" type="Texture" id=4]
[ext_resource path="res://ResourcesV2/Images/CreateRoomInactive.png" type="Texture" id=5]
[ext_resource path="res://ResourcesV2/Images/RefreshIcon.png" type="Texture" id=6]
[ext_resource path="res://ResourcesV2/Images/BackInactive.png" type="Texture" id=7]
[ext_resource path="res://ResourcesV2/Images/BackActive.png" type="Texture" id=8]
[ext_resource path="res://Resources/Fonts/8bitlimr.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
size = 20
extra_spacing_top = 6
extra_spacing_char = 2
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 10 )

[node name="Background" type="TextureRect"]
anchor_top = -0.00173807
anchor_bottom = -0.00173807
margin_right = 1366.67
margin_bottom = 765.0
rect_pivot_offset = Vector2( -298.754, 62.1887 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logoRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_top = 93.0
margin_right = 182.0
margin_bottom = 216.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLabel" type="Label" parent="."]
margin_left = 1106.58
margin_top = 169.525
margin_right = 1186.58
margin_bottom = 191.525
custom_fonts/font = SubResource( 1 )
text = "Username"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyContainer" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyBgPanel" type="Panel" parent="lobbyContainer"]
modulate = Color( 1, 1, 1, 0.745098 )
margin_left = 512.0
margin_top = 245.0
margin_right = 857.0
margin_bottom = 514.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyLabel" type="Label" parent="lobbyContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 493.5
margin_top = 251.0
margin_right = 835.5
margin_bottom = 279.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Rooms"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="refreshButton" type="TextureButton" parent="lobbyContainer"]
margin_left = 820.308
margin_top = 250.967
margin_right = 850.308
margin_bottom = 280.967
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyBackButton" type="TextureButton" parent="lobbyContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 622.002
margin_top = 639.0
margin_right = 706.002
margin_bottom = 684.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="lobbyCreateRoomButton" type="TextureButton" parent="lobbyContainer"]
margin_left = 599.395
margin_top = 532.047
margin_right = 775.395
margin_bottom = 574.047
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyScroll" type="ScrollContainer" parent="lobbyContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 513.0
margin_top = 277.0
margin_right = 832.0
margin_bottom = 422.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roomContainer" type="VBoxContainer" parent="lobbyContainer/lobbyScroll"]
margin_right = 307.0
margin_bottom = 193.0
rect_min_size = Vector2( 307, 193 )

[node name="errLabel" type="Label" parent="lobbyContainer"]
visible = false
margin_left = 513.0
margin_top = 482.0
margin_right = 857.0
margin_bottom = 496.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Error Message"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="createContainer" type="Container" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="TextureButton" parent="createContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 622.002
margin_top = 639.0
margin_right = 706.002
margin_bottom = 684.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="createBgPanel" type="Panel" parent="createContainer"]
modulate = Color( 1, 1, 1, 0.745098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 408.0
margin_top = 300.0
margin_right = 919.0
margin_bottom = 459.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="createRoomButton" type="TextureButton" parent="createContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 575.335
margin_top = 404.5
margin_right = 751.335
margin_bottom = 446.5
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roomNameInput" type="TextEdit" parent="createContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 593.944
margin_top = 324.0
margin_right = 904.944
margin_bottom = 364.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roomNameLabel" type="Label" parent="createContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 423.569
margin_top = 325.878
margin_right = 558.569
margin_bottom = 358.878
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.92549, 0.0901961, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.6, 0.333333, 1 )
text = "Room Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="errLabel" type="Label" parent="createContainer"]
visible = false
margin_left = 429.0
margin_top = 400.0
margin_right = 940.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0, 0.00392157, 1 )
text = "Error Message"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="lobbyContainer/refreshButton" to="." method="_on_refreshButton_pressed"]
[connection signal="pressed" from="lobbyContainer/lobbyBackButton" to="." method="_on_lobbyBackButton_pressed"]
[connection signal="pressed" from="lobbyContainer/lobbyCreateRoomButton" to="." method="_on_lobbyCreateRoomButton_pressed"]
[connection signal="pressed" from="createContainer/backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="createContainer/createRoomButton" to="." method="_on_createRoomButton_pressed"]
